--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         font-family: "Arial", sans-serif;
         line-height: 1.6;
         margin: 0;
-        padding: 0;
+        padding: 5px;
         background-color: lightskyblue;
         color: #333333;
       }
@@ -34,7 +34,7 @@
         background-color: #174f87;
         color: #ffffff;
         text-align: center;
-        padding: 10px 0;
+        padding: 5px 0;
       }
 
       header h1 {
@@ -48,7 +48,7 @@
       }
 
       .container {
-        max-width: 800px;
+        max-width: 90%;
         margin: 0 auto;
         background-color: lightcyan;
         padding: 10px;
@@ -255,10 +255,10 @@
       <section>
         <h2>Our Resources</h2>
         <!-- <h3>Machinery & Equipments</h3> -->
-        <iframe src="./r2.jpeg" width="800px" height="200px"></iframe>
+        <iframe src="./r2.jpeg" width="100%" height="200px"></iframe>
         <br /><br />
         <!-- <h3>Manpower</h3> -->
-        <iframe src="./r1.jpeg" width="800px" height="200px"></iframe>
+        <iframe src="./r1.jpeg" width="100%" height="200px"></iframe>
       </section>
 
       <section class="section">
